--- a/angular17/package.json
+++ b/angular17/package.json
@@ -19,8 +19,7 @@
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
     "bootstrap": "^5.3.2",
-    "jquery": "^3.7.1",
-    "poppers.js": "^1.16.1",
+    "ngx-bootstrap": "^12.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
